# backyard

./: README.md
opengl/sb6/0201_first/: .ycm_extra_conf.py  main.cpp
opengl/sb6/0301_shaders/: .gitignore  CMakeLists.txt
opengl/sb6/0302_shadersout/: CMakeLists.txt  main.cpp
opengl/sb6/0303_interface_blocks/: main.cpp
opengl/sb6/0304_tessellation/: CMakeLists.txt  control_shader.txt  evaluation_shader.txt  main.cpp  shader.fs  shader.vs
opengl/sb6/es01/: CMakeLists.txt
opengl/sb6/es02/: CMakeLists.txt  main.cpp
opengl/sb6/ex_ch01_03/: main.cpp
opengl/sb6/ex_ch02_03/: CMakeLists.txt
opengl/sb6/ex_ch03_01/: main.cpp
opengl/sb6/ex_ch03_03/: CMakeLists.txt
opengl/sb6/framework/: .gitignore  CMakeLists.txt
rust/adder/: Cargo.toml
rust/adder/src/: lib.rs
rust/adder/tests/: lib.rs
rust/dining-philosophers/: Cargo.toml
rust/dining-philosophers/src/: main.rs
rust/embed/: Cargo.toml
rust/embed/python/: embed.py
rust/embed/src/: lib.rs
rust/macros/: Cargo.toml
rust/macros/src/: main.rs
rust/spinning-square/: Cargo.toml
rust/spinning-square/src/: main.rs
vplay/FlappyBird/: main.cpp
vplay/FlappyBird/qml/: Ground.qml  Pipe.qml  Player.qml  main.qml
vplay/hello/android/: AndroidManifest.xml
vplay/hello/android/res/values/: strings.xml
vplay/hello/ios/: Project-Info.plist
vplay/hello/qml/: Main.qml  config.json
